--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "zone.js": "0.8.18",
     "json2typescript": "^1.0.4",
     "ngx-weui": "1.1.0",
-    "@angular/animations": "^5.0.3"
+    "@angular/animations": "^5.0.3",
+    "xlsx": "^0.11.10",
+    "file-saver": "^1.3.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
