--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,5 @@
 {
   "name": "demo-mobile",
-  "app_id": "",
-  "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {},
+  "type": "ionic-angular"
 }
