--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "angular2-qrcode": "^2.0.1",
+    "file-saver": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.4.3",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
     "json2typescript": "^1.0.4",
     "ngx-weui": "1.1.0",
+    "rxjs": "5.4.3",
+    "sw-toolbox": "3.6.0",
     "xlsx": "^0.11.10",
-    "file-saver": "^1.3.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
