--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "sky project"
 }
