--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "file-saver": "^1.3.3",
     "ionic-angular": "3.8.0",
     "ionicons": "3.0.0",
-    "json2typescript": "^1.0.4",
+    "json2typescript": "1.0.4",
     "ngx-weui": "1.1.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
